# updater-lp-rs

./: .gitignore  Cargo.toml  README.md
src/: github.rs  lib.rs  repo_breakdown.rs  source.rs
src-test/: Cargo.toml  main.rs
src/providers/: github.rs  mod.rs
src/sources/: github_single.rs
src/sources/github/: asset.rs  github.rs  mod.rs  params.rs  restson.rs
src/structs/: mod.rs  providers.rs  repo_breakdown.rs
src/traits/: mod.rs  provider.rs  providers.rs
tests/: lpsettings.rs
