[package]
name = "updater-lp"
version = "0.2.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
version-lp = "0.2"
# version = { git = "https://github.com/Snsvrno/version-lp-rs", tag = "0.1.5" }
# lperror = { git = "https://github.com/Snsvrno/errors-lp-rs", tag = "0.1.0"}
# lpsettings = { git = "https://github.com/Snsvrno/lpsettings-rs", tag = "0.1.7"}

ansi_term = "0.11"
restson = "0.4"
serde = "1.0"
serde_derive = "1.0"

regex = "1.1"

log = "0.4"
failure = "0.1"
chrono = "0.4"