[package]
name = "updater-lp"
version = "0.3.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

license = "MIT"
description = "a library to easily make cli apps with an auto-updater."
repository = "https://github.com/snsvrno/updater-lp-rs"
readme = "README.md"
keywords = ["update","updater"]

exclude = [ "/src-test" ]

[dependencies]
ansi_term = "0.11"
restson = "0.4"

serde = "1.0"
serde_derive = "1.0"

regex = "1.1"

log = "0.4"
failure = "0.1"
chrono = "0.4"

version-lp = "0.2"
download-lp = "0.2"
archive-lp = "0.2"
platform-lp = "0.2"